--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,6 +30,44 @@
 				</form>
 			</div>
 	</div>
+
+	<div class="afterlogin">
+        <h1>Choose Your Cloud Resources</h1>
+        <div class="row">
+            <!-- VM Resource Card -->
+            <div class="card">
+                <img src="https://via.placeholder.com/400x200?text=VM+Instances" alt="VM Instances">
+                <div class="card-body">
+                    <h5 class="card-title">Virtual Machines</h5>
+                    <p class="card-text">Choose and configure virtual machines tailored to your needs.</p>
+                    <button class="btn">Select VM</button>
+                </div>
+            </div>
+
+            <!-- Storage Resource Card -->
+            <div class="card">
+                <img src="https://via.placeholder.com/400x200?text=Storage" alt="Storage">
+                <div class="card-body">
+                    <h5 class="card-title">Storage</h5>
+                    <p class="card-text">Select from various storage options to store your data securely.</p>
+                    <button class="btn">Select Storage</button>
+                </div>
+            </div>
+
+            <!-- Bandwidth Resource Card -->
+            <div class="card">
+                <img src="https://via.placeholder.com/400x200?text=Bandwidth" alt="Bandwidth">
+                <div class="card-body">
+                    <h5 class="card-title">Bandwidth</h5>
+                    <p class="card-text">Allocate the required bandwidth to optimize network performance.</p>
+                    <button class="btn">Select Bandwidth</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 	<script src="script.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </body>
 </html>
