-version-4.4.2-fontend-update

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>CloudWise</title>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
