-version-4.6-banked-fontend-integrated

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,6 @@
 					<input type="text" name="user_id" placeholder="User ID" required="">
 					<input type="email" name="email" placeholder="Email" required="">
 					<input type="password" name="password" placeholder="Password" required="">
-					<input type="user_id" name="user_id" placeholder="User_id" required="">
 					<input type="number" name="phoneNumber" placeholder="Phone Number" required="">
 					<button>Sign up</button>
 				</form>
@@ -28,7 +27,7 @@
 					<label for="chk" aria-hidden="true">Login</label>
 					<input type="text" name="username" placeholder="Username" required="">
 					<input type="password" name="password" placeholder="Password" required="">
-					<button>Login</button>
+					<button type="submit">Login</button>
 				</form>
 			</div>
 	</div>
