--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="favicon.png" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -25,7 +26,7 @@
 			<div class="login">
 				<form>
 					<label for="chk" aria-hidden="true">Login</label>
-					<input type="text" name="username" placeholder="Username" required="">
+					<input type="text" name="username" placeholder="Username" required="" id = "usernamee">
 					<input type="password" name="password" placeholder="Password" required="">
 					<button type="submit">Login</button>
 				</form>
@@ -33,6 +34,11 @@
 	</div>
 
 	<div class="afterlogin">
+        <div class="user-profile">
+            <i class="fas fa-user-circle profile-icon"></i>
+            <span id="fetchUser_Id" class="user-id">User_ID</span>
+        </div>        
+
         <h1>Choose Your Cloud Resources</h1>
         <div class="row">
             <!-- VM Resource Card -->
