--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -79,25 +79,6 @@
         </div>
     </div>
 
-    <div id="vmDiv">
-        <table id="vendorTable" border="1">
-            <thead>
-                <tr>
-                    <th>Select</th>
-                    <th>Vendor ID</th>
-                    <th>Vendor Name</th>
-                    <th>Vendor Address</th>
-                    <th>Phone Number</th>
-                    <th>Quantity</th>
-                    <th>Price per Hour</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Rows will be appended here -->
-            </tbody>
-        </table>
-    </div>
-    
     <div class="updateDetails">
         <div class="update card">
             <form id="updateForm">
@@ -117,6 +98,30 @@
             <!-- Thead and tbody will be dynamically inserted by JavaScript -->
         </table>
         <button class="back-button" id="backBtn">Back</button>
+    </div>
+
+
+    <div id="vmDiv">
+        <table id="vendorTable" border="1">
+            <thead>
+                <tr>
+                    <th>Select</th>
+                    <th>Vendor ID</th>
+                    <th>Vendor Name</th>
+                    <th>Vendor Address</th>
+                    <th>Phone Number</th>
+                    <th>Quantity</th>
+                    <th>Price per Hour</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Rows will be appended here -->
+            </tbody>
+        </table>
+        <div>
+            <button id="purchaseBtn" class="btn">Purchase</button>
+            <button id="backBtnnnnn" class="btn">Back</button>
+        </div>
     </div>
 
 	<script src="script.js"></script>
